tests/error/struct_errors/mutual_recursive.py
from guppylang.decorator import guppy


@guppy.struct
class StructA:
    x: "list[StructB]"


@guppy.struct
class StructB:
    y: "StructA"


guppy.compile(StructB)
