tests/error/struct_errors/mutual_recursive.err
Error: Unsupported (at $FILE:6:13)
  | 
4 | @guppy.struct
5 | class StructA:
6 |     x: "list[StructB]"
  |              ^^^^^^^ Recursive structs are not supported

Guppy compilation failed due to 1 previous error
